# kafka-healthcheck

./: Cargo.toml  Dockerfile
src/: main.rs
