[package]
name = "kafka-healthcheck"
version = "0.1.0"
authors = ["nutmos <nuttapong_mos@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
rdkafka = "0.24.0"
json = "0.12.4"
serde = "1.0.116"
serde_json = "1.0.58"
clap = "2.33.3"
lazy_static = "1.4.0"
simple_logger = "1.11"
log = "0.4"
